# LoRA_fine-tune_summarize

./: LoRa_fine_tune.ipynb  NLP_project.txt  README.md  optuna_LoRa_optimaization.ipynb  optuna_LoRa_optimaization_run.ipynb  pyproject.toml  re(1)  requirements-nogpu.txt  requirements.txt  streamlit_app.py  summarize_dialogue.ipynb
asset/: LoRA Fine-TuneOptimi_ Dia Sum.md  LoRA Intro & Equation.md
research/: Advance_LLMs_choose.md  Advanced FLAN‑T5 + LoRA Fine‑Tuning Project Roadma.md  notes.md
