[project]
name = "generative-ai-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.30.0",
    "datasets==2.19.0",
    "evaluate==0.4.2",
    "matplotlib==3.8.2",
    "numpy==1.26.4",
    "optuna==3.6.1",
    "optuna-integration==3.6.0",
    "pandas==2.2.2",
    "peft==0.10.0",
    "rouge-score==0.1.2",
    "scikit-learn==1.3.2",
    "scipy==1.13.1",
    "sentencepiece==0.2.0",
    "tqdm==4.67.1",
    "transformers==4.40.0",
]
